--- a/package.json
+++ b/package.json
@@ -102,8 +102,8 @@
         "workbox-webpack-plugin": "4.3.1"
     },
     "scripts": {
-        "start": "node scripts/start.js dev",
-        "build": "node scripts/build.js production",
+        "start": "set NODE_OPTIONS=--openssl-legacy-provider & node scripts/start.js dev",
+        "build": "set NODE_OPTIONS=--openssl-legacy-provider & node scripts/build.js production",
         "starandsea": "node scripts/build.js starandsea",
         "test": "node scripts/test.js",
         "commit": "git-cz",
