--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     },
     "husky": {
         "hooks": {
-            "commit-msg": "commitlint -e $GIT_PARAMS",
+            "11commit-msg": "commitlint -e $GIT_PARAMS",
             "pre-commit": "pretty-quick --staged"
         }
     },
